# tinyla

./: CMakeLists.txt  README.md
include/tinyla/: angle.hpp  geom.hpp  geom.inl  mat.h  mat.hpp  mat.inl  util.h  util.hpp  vec.h  vec.hpp  vec.inl
test/: compare.hpp  data.hpp  geom_benchs.cpp  geom_tests.cpp  mat_benchs.cpp  mat_tests.cpp  vec_tests.cpp
